@@ -224,6 +224,9 @@
       <name>James Urie</name>
     </contributor>
     <contributor>
+      <name>Jochen Wiedmann</name>
+    </contributor>
+    <contributor>
       <name>Frank W. Zammetti</name>
     </contributor>
   </contributors>
